--- a/front/src/app/shared/components/button/button.component.html
+++ b/front/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button [class.full-width]="block" class="gradient-button">
+<button [class.full-width]="block" class="main-button">
     <ng-content></ng-content>
 </button>
