--- a/front/src/app/shared/components/button/button.component.scss
+++ b/front/src/app/shared/components/button/button.component.scss
@@ -1,12 +1,15 @@
 .main-button {
   background: linear-gradient(270deg, #C645A9 0%, #58BBDB 100%);
   border-radius: 20px;
-  padding: 10px 20px;
   color: white;
   cursor: pointer;
-  border-radius: 5px;
+  border: none;
   font-size: 1rem;
   transition: opacity 0.3s;
+  padding: 6px 0;
+  font-family: 'Lato';
+  font-size: 20px;
+  font-weight: 600;
 
   &:hover {
     opacity: 0.9;
