--- a/front/src/app/modules/user/sign-in/sign-in.component.scss
+++ b/front/src/app/modules/user/sign-in/sign-in.component.scss
@@ -1,10 +1,10 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  height: 100vh; /* 100% of the viewport height */
+  margin: 20px 40px;
+  height: calc(100vh - 40px); /* 100% of the viewport height */
+  justify-content: center;
   align-items: center; /* Center items horizontally */
-  padding: 50px;
   img {
     width: auto; /* maintain aspect ratio */
     height: calc(
@@ -14,6 +14,14 @@
     max-height: calc(
       100vw - 100px
     ); /* ensures it doesn't exceed container's width */
+    justify-self: flex-start;
+  }
+
+  .sign-in-header {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
   }
 
   h1 {
@@ -30,6 +38,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    b {
+      font-weight: 700;
+    }
   }
 
   h2 {
@@ -38,5 +49,37 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    margin-top: 15px;
+
+    .submit-section {
+      position: relative;
+      margin-top: 10px;
+      .form-submit-error {
+        margin: 3px 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fe4b4b;
+        font-size: 10px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .no-account {
+    margin-top: 25px;
+    align-self: flex-end;
+    color: #b7b7b7;
+    font-size: 10px;
+    font-weight: 500;
+    a {
+      color: #48e3be;
+    }
   }
 }
