🎨 style(frontend): update nav-bar component html and styling

--- a/front/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/front/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,3 +1,11 @@
-<p>nav-bar works!</p>
+<nav class="navbar">
+  <div class="navbar-left">
+    <img src="../../../../assets/images/easy_media_logo.png" alt="Logo" />
+    <h1>Easy Media</h1>
+  </div>
+  <div class="navbar-right">
+    <app-nav-menu></app-nav-menu>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
