--- a/front/src/app/shared/components/button/button.component.scss
+++ b/front/src/app/shared/components/button/button.component.scss
@@ -6,9 +6,8 @@
   border: none;
   font-size: 1rem;
   transition: opacity 0.3s;
-  padding: 6px 0;
+  padding: 6px 20px;
   font-family: 'Lato';
-  font-size: 20px;
   font-weight: 600;
 
   &:hover {
@@ -18,4 +17,12 @@
 
 .full-width {
   width: 100%;
+}
+
+.small{
+  font-size: 15px;
+}
+
+.large{
+  font-size: 20px;
 }
