✨ feat(frontend): add fetch and display posts based on filter criteria and pagination

--- a/front/src/app/modules/post/my-posts/my-posts.component.html
+++ b/front/src/app/modules/post/my-posts/my-posts.component.html
@@ -1,1 +1,33 @@
-<p>my-posts works!</p>
+<div class="my-posts">
+  <h1>My Publications</h1>
+  <form class="search-form">
+    <a *ngIf="posts.length > 0 && !loading" class="post-count"
+      >Showing {{ posts.length }}/{{ meta.total }} Post</a
+    >
+    <a *ngIf="posts.length === 0 && !loading" class="post-count"
+      >No results here</a
+    >
+    <app-day-selector
+      [label]="'Date Select'"
+      [control]="asFormControl(filterForm.get('date'))"
+    />
+  </form>
+
+  <div *ngIf="!loading" class="posts-container">
+    <div class="cards" *ngIf="!loading">
+      <app-post-card
+        *ngFor="let post of posts"
+        [post]="post"
+      ></app-post-card>
+    </div>
+    <app-empty *ngIf="posts.length === 0 && !loading"></app-empty>
+    <app-paginator
+      *ngIf="!loading && posts.length > 0"
+      [(currentPage)]="currentPage"
+      (currentPageChange)="changePage($event)"
+      [itemsPerPage]="3"
+      [totalPages]="meta.totalPages"
+    />
+  </div>
+  <app-spinner *ngIf="loading"></app-spinner>
+</div>
